fix(quality): remove unused imports, replace wildcards, and strengthen null safety